fixed layout issues

--- a/src/frontend/ezgym-web/src/app/ezgym/accounts/profile/edit-profile/edit-profile.component.scss
+++ b/src/frontend/ezgym-web/src/app/ezgym/accounts/profile/edit-profile/edit-profile.component.scss
@@ -77,8 +77,8 @@
 }
 
 .profile-bio-image {
-    width: 100px;
-    height: 100px;
+    width: 75px;
+    height: 75px;
     background: $primary;
     overflow: hidden;
     border-radius: 25%;
