--- a/src/frontend/ezgym-web/src/app/ezgym/gyms/gym-profile/gym-profile.component.scss
+++ b/src/frontend/ezgym-web/src/app/ezgym/gyms/gym-profile/gym-profile.component.scss
@@ -4,66 +4,56 @@
     margin-top: 20px;
 }
 
+.apps {
+    margin-top: 0;
+
+    ul {
+        display: flex;
+        list-style: none;
+        margin-top: 20px;
+        padding-left: 10px;
+
+        li {
+            width: 75px;
+            cursor: pointer;
+            height: 75px;
+            box-shadow:
+                inset 0 -3em 3em rgba(0, 0, 0, 0.1),
+                0 0 0 2px rgb(255, 255, 255),
+                0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+            padding: 10px;
+
+            color: $white;
+            margin-right: 10px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            border-radius: 10px;
+
+            &:hover {
+                background: $white;
+            }
+
+            img {
+                height: 50px;
+
+            }
+
+            p {
+                font-size: 12px;
+                text-align: center;
+                margin-bottom: 0px;
+                color: $dark-grey;
+            }
+
+        }
+    }
+}
+
+
 
 h4 {
     margin-left: 10px;
-    color: $dark-grey !important;
-}
-.account-menu-options {
-    flex: 1;
-    flex-wrap: wrap;
-    display: flex;
-    flex-direction: rows;
-    margin-bottom: 20px;
-    background: $white;
-    padding: 10px;
-    border-radius: 20px;
-
-    .menu-option {
-        display: flex;
-        flex-direction: column;
-        width: 100px;
-        height: 100px;
-        box-shadow:
-            inset 0 -3em 3em rgba(0, 0, 0, 0.1),
-            0 0 0 2px rgb(255, 255, 255),
-            0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
-        border: 1px solid #ccc;
-        border-radius: 10px;
-        align-items: center;
-        justify-content: center;
-        margin-right: 10px;
-        cursor: pointer;
-
-
-        .icon-wrapper {
-            i {
-                color: $primary;
-                font-size: 40px;
-            }
-        }
-
-        label {
-            font-family: $font-family;
-            font-size: 12px;
-            color: $primary;
-            cursor: pointer;
-        }
-
-        img {
-            display: block;
-            width: 100%;
-            height: 100%;
-        }
-
-        &:hover {
-            label {
-                color: $secondary;
-            }
-
-            i {
-                color: $secondary  !important;
-            }
-        }
-    }
+    color: $dark-grey  !important;
 }
