--- a/src/frontend/ezgym-web/src/app/ezgym/training/training.component.scss
+++ b/src/frontend/ezgym-web/src/app/ezgym/training/training.component.scss
@@ -231,9 +231,20 @@ header {
                 position: absolute;
                 background: $secondary;
                 height: 100%;
-                width: var(--progress);
                 border-radius: 10px;
                 background: linear-gradient(to right, $secondary, $color-green);
+                animation: progressBar 3s ease-in-out;
+                animation-fill-mode: both
+            }
+
+            @keyframes progressBar {
+                0% {
+                    width: 0;
+                }
+
+                100% {
+                    width: var(--progress)
+                }
             }
         }
 
@@ -326,11 +337,12 @@ h4 {
 
         &.active {
 
-
             background: $primary;
 
 
             img {
+                animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
+                transform: translate3d(0, 0, 0);
                 transition: all 100ms ease-in 0s;
                 top: 30px;
             }
@@ -346,6 +358,30 @@ h4 {
             }
 
 
+        }
+
+        @keyframes shake {
+
+            10%,
+            90% {
+                transform: translate3d(-1px, 0, 0);
+            }
+
+            20%,
+            80% {
+                transform: translate3d(2px, 0, 0);
+            }
+
+            30%,
+            50%,
+            70% {
+                transform: translate3d(-4px, 0, 0);
+            }
+
+            40%,
+            60% {
+                transform: translate3d(4px, 0, 0);
+            }
         }
 
 
